Fixed joavad email, changed link colors was hard to see, made cifar10 title clickable

--- a/css/main.css
+++ b/css/main.css
@@ -22,10 +22,22 @@ body {
     margin-bottom: 50px;
 }
 
+li a:link { color: red; } /* unvisited link */
+li a:visited { color: green; } /* visited link */
+li a:hover { color: hotpink; } /* mouse over link */
+li a:active { color: blue; } /* selected link */
 li p { font-size: 25px }
+
 img { width: 300px; cursor: pointer }
+
 h1 { font-size: 72px; }
 h2 { font-size: 42px; }
 h3 { font-size: 32px; }
 h1, h2, h3 { text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; }
+
 ul { list-style-type: none; }
+
+h3 a {
+    text-decoration: none;
+    color: white;
+}
